First test gameplay implemented, 'turns' can now be taken

--- a/client/starflower-client/src/app/pages/nation/nation.html
+++ b/client/starflower-client/src/app/pages/nation/nation.html
@@ -8,6 +8,7 @@
     <li><strong>Economy:</strong> {{ game.economy }}</li>
     <li><strong>Legitimacy:</strong> {{ game.legitimacy }}</li>
   </ul>
+  <button (click)="advance()">Advance Turn</button>
 </div>
 
 <ng-template #loading>
