Added national and galactic mean time clock UI

--- a/client/starflower-client/src/app/app.html
+++ b/client/starflower-client/src/app/app.html
@@ -1,1 +1,9 @@
+<header class="navbar">
+  <span><strong>Starflower</strong></span>
+  <div>
+    <p><strong>National Standard Time (NST):</strong> {{ localTime }}</p>
+    <p><strong>Galactic Mean Time (GMT):</strong> {{ galacticTime }}</p>
+  </div>
+</header>
+
 <router-outlet></router-outlet>
