--- a/client/starflower-client/src/app/app.html
+++ b/client/starflower-client/src/app/app.html
@@ -1,5 +1,11 @@
 <header class="navbar">
   <span><strong>Starflower</strong></span>
+
+  <a routerLink="/">Nation</a>
+  <a routerLink="/journal">Journal</a>
+
+  <span class="spacer"></span>
+
   <div>
     <p><strong>National Standard Time (NST):</strong> {{ localTime }}</p>
     <p><strong>Galactic Mean Time (GMT):</strong> {{ galacticTime }}</p>
