--- a/client/starflower-client/src/app/pages/nation/nation.html
+++ b/client/starflower-client/src/app/pages/nation/nation.html
@@ -1,3 +1,7 @@
+@if (error) {
+<p class="error">{{ error }}</p>
+}
+
 <div *ngIf="game; else loading">
   <h1>{{ game?.nationName || 'Unnamed Nation' }}</h1>
 
